Giraph Change Log

Release 1.1.0 - unreleased
  GIRAPH-736: Bring back FindBugs (nitay)

  GIRAPH-735: DiskBackedPartitionStore throws NPE due to uninitialized OutEdges
  (claudio)

  GIRAPH-734: DiskBackedPartitionStore attempting to release a lock it doesn't own
  (cmuchinsky via claudio)

  GIRAPH-739: Discrepancy among numeric constants corresponding to frequency of 
  writing in TextAggregatorWriter (korlando via claudio)

  GIRAPH-740: ArrayListWritable object is not cleared in readFields()
  (korlando via claudio)

  GIRAPH-692: Add Bracha Toueg Deadlock Detection in the examples 
  (aarmax00 via claudio)

  GIRAPH-717: HiveJythonRunner with support for pure Jython value types (nitay)

  GIRAPH-722: ProgressableUtils.waitForever is not calling progress (majakabiljo)

  GIRAPH-549: Tinkerpop/Blueprints/Rexter InputFormat (armax00 via claudio)

  GIRAPH-701: Communication improvement using one-to-all message
  sending (Bingjing via aching)

  GIRAPH-721: Don't call progress on each edge/vertex loaded (majakabiljo)

  GIRAPH-720: Provide a way to change job name (majakabiljo)

  GIRAPH-718: Output all per-superstep metrics per superstep (majakabiljo)

  GIRAPH-716: Stop modifying Configuration since it's not thread-safe (majakabiljo)

  GIRAPH-715: Fix MessageValueFactory performance regression (nitay)

  GIRAPH-709: More flexible Jython script loading (nitay)

  GIRAPH-708: Factories for creation of all IVEM types (nitay)

  GIRAPH-710: Define zookeeper version in a property to allow build time
  override (apurtell via nitay)

  GIRAPH-705: Type converters and giraph-hive cleanup (nitay)

  GIRAPH-704: Specialized message stores (majakabiljo)

  GIRAPH-703: create an appropriate way to generate the options.html page using maven.
  (armax00 via claudio)

  GIRAPH-702: Fix multithreaded output (majakabiljo)

  GIRAPH-676: A short tutorial on getting started with Giraph (boshmaf via claudio)

  GIRAPH-698: Expose Computation to a user (aching)
